plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'utn.saborcito'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

ext {
	mapstructVersion = "1.5.5.Final"
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-actuator' // Health checks para producción
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	//Auth0
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	implementation("com.auth0:java-jwt:4.4.0") //decodificar JW
	implementation("io.jsonwebtoken:jjwt-api:0.11.5")
	runtimeOnly("io.jsonwebtoken:jjwt-impl:0.11.5")
	runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.11.5")
	implementation 'org.springframework.boot:spring-boot-starter-security'
	// Reemplazamos H2 por MySQL
	// runtimeOnly 'com.h2database:h2'
	runtimeOnly 'mysql:mysql-connector-java:8.0.33'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Springdoc OpenAPI para Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'

	// Para soporte de variables de entorno
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'me.paulschwarz:spring-dotenv:4.0.0'

	// MapStruct
	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
	// Necesario si también usas Lombok y MapStruct juntos
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
	implementation 'org.apache.poi:poi-ooxml:5.2.3'
	implementation 'org.apache.poi:poi:5.2.3'

	// Implementacion para Generara PDF del pedido
	implementation 'com.github.librepdf:openpdf:1.3.30'
	// Implementacion para enviar correos
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// Cloudinary para manejo de imágenes
	implementation 'com.cloudinary:cloudinary-http5:2.0.0'

	// Implementacion de MercadoPago
	implementation("com.mercadopago:sdk-java:2.4.0")



}

tasks.named('test') {
	useJUnitPlatform()
}
